# g2ltk

./: .gitignore  README.md  autotag.py  autoupload.py  computator_z_w.py  compute_z_w_multipleacquisition.ipynb  ipynb-10Hzanalyzedepth_monoprobe.py  ipynb-10Hzanalyzespeed_monoprobe.py  ipynb-10Hzcomparedepthandspeed.py  ipynb-10Hzmeasuredepth_polyprobe.py  ipynb-10Hzmeasurespeed_monoprobe.py  ipynb-10Hzmeasurespeed_polyprobe.py  ipynb-analyzedepth_monoprobe.py  ipynb-analyzespeed_monoprobe.py  ipynb-convert_chronos_to_gcv.py  ipynb-drainstudy_base.py  ipynb-drainstudy_base_old.py  ipynb-drainstudy_correlateslopecontrast.py  ipynb-drainstudy_measuresnap_framefit.py  ipynb-drainstudy_measuresnap_monofit.py  ipynb-drainstudy_measuresnap_reliable.py  ipynb-drainstudy_withsnap.py  ipynb-fig_drainstudy.py  ipynb-fig_illustrimagecamera.py  ipynb-fig_positiontime.py  ipynb-fig_tunnel.py  ipynb-marginaldrain.py  ipynb-marginaldrain_onechunk.py  ipynb-measuredepth_polyprobe.py  ipynb-measurespeed_monoprobe.py  ipynb-plot1Hzand10Hz.py  ipynb-readvideo_fbfonthefly.py  ipynb-testray_testhigh.py  jupytopy.py  measure_zeta0_multiple.ipynb  measure_zeta0_single.ipynb  measures.ods  pyproject.toml  pytojupy.py  readvideo_fbf.py  (+3 more)
g2ltk/: __init__.py  datasaving.py  fringeswork.py  rivuletfinding.py
scripts/: autoupload.py  ipynb-convert_chronos_to_gcv.py  ipynb-convert_videos_to_mp4.py  ipynb-fig_trackmenisci.py  ipynb-measure_phaseshift.py  ipynb-readvideo_fbfonthefly.py  ipynb-trackmenisci.py  jupytopy.py  pytojupy.py
tests/: test_arrayqol.py  test_fourier1D.py
tools/: __init__.py  (+5 more)
(+128 files in other folders)
